# QtAppRunner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AppRunner.hpp
src/: CMakeLists.txt  Fixture.cpp  Fixture.h  testAppRunner.cpp  testQFoo.cpp  testQGui.cpp
